welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:35: error: not enough arguments for method motif2: (c: java.awt.Color)Unit.
Unspecified value parameter c.
motif2();
      ^